<resources>
    <string name="hello_world">Hello world!</string>
    <string name="icon_grid">&#xf00a;</string>
    <string name="icon_list">&#xf0c9;</string>
    <string-array name="servers">
        <item>Israel</item>
        <item>Moldova</item>
    </string-array>
    <string-array name="languages">
        <item>עברית</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="printer_unavailable_versionApi">Sorry, your Android version does not support printing, please upgrade it to Android KITKAT (4.4).</string>
    <string name="modelDetail">Model detail</string>
    <string name="language">Language</string>
    <string name="new_proposal">New proposal</string>
    <string name="choose_store">Choose store</string>
    <string name="choose_project">Choose project</string>
    <string name="choose_date">Click here to choose a date</string>
    <string name="order_no">Order No. </string>
    <string name="inventory_order_from">Inventory order from </string>
    <string name="proposals_list">Proposals list</string>
    <string name="monthly_sales_title">Monthly Sales</string>
    <string name="monthly_sales"><u>Monthly Sales</u></string>
    <string name="proposal_details">Proposal details</string>
    <string name="remove">Remove</string>
    <string name="total_balance">Total balance</string>
    <string name="order_by_customer">Order by customer</string>
    <string name="order_from">Order from</string>
    <string name="order_from_suppliers">Order from suppliers</string>
    <string name="enclosures">Enclosures</string>
    <string name="preview">Preview</string>
    <string name="balance_models">Balance models</string>
    <string name="items">Items</string>
    <string name="list_of_all_items">List of all items</string>
    <string name="list_of_all_orders">List of all orders</string>
    <string name="items_balance">Items balance</string>
    <string name="models_balance">Models balance</string>
    <string name="model">Model</string>
    <string name="pricing">Pricing</string>
    <string name="menu_item_inventory">Inventory orders</string>
    <string name="menu_inventory_description">List of all inventory orders</string>
    <string name="please_select_customer_first">Please select customer first.</string>
    <string name="press_here_to_select">Press here to select</string>
    <string name="all">All</string>
    <string name="more">More</string>
    <string name="search_customer">Search Customer</string>
    <string name="serial_item">Serial Item</string>
    <string name="open_date">Open Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="hours">Hours</string>
    <string name="calls">Calls</string>
    <string name="debts">Debts</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="logout_mes">Are you sure you wish to log out?</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="access_demo">Access demo account to test all features and usability</string>
    <string name="finish_order">Finish order!?</string>
    <string name="continue_unfinished_order">You have an unfinished order! Do you want to finish, or cancel it?</string>
    <string name="remember_or_clear_order">To remember your choose or to clear your order?</string>
    <string name="remember">Remember</string>
    <string name="bonus">Bonus</string>
    <string name="bonus_underline"><u>Bonus</u></string>
    <string name="add_customer">Add custommer</string>
    <string name="last">Last</string>
    <string name="add_service_task">Add service task</string>
    <string name="update_service_task">Update service task</string>
    <string name="attribute">Attribute</string>
    <string name="care_by">Care by</string>
    <string name="making_note">Making note</string>
    <string name="none">None</string>
    <string name="service_list">Service list</string>
    <string name="today_calls_by_hours">Today calls by hours</string>
    <string name="this_month_calls">This month calls</string>
    <string name="this_year_calls">This year calls</string>
    <string name="new_call">New Call</string>
    <string name="list">List</string>
    <string name="price_netto">Price Netto</string>
    <string name="number">number</string>
    <string name="invoice_type">Invoice type</string>
    <string name="return_invoices">Return invoices</string>
    <string name="return_invoice">Return invoice</string>
    <string name="order_successfully_submited">Your order was successfully submited.</string>
    <string name="invoice_successfully_submited">Your invoice was successfully submited.</string>
    <string name="return_invoice_successfully_submited">Your return invoice was successfully submited.</string>
    <string name="shipping_doc_successfully_submited">Your shipping document was successfully submited.</string>
    <string name="refund_certificate_successfully_submited">Your refund certificate was successfully submited.</string>
    <string name="quantity_in_last_two_years">Quantity in last 2 years</string>
    <string name="money_in_last_two_years">Money in last 2 years</string>
    <string name="item_information">Item information</string>
    <string name="item_">Item:</string>
    <string name="items_">Items:</string>
    <string name="sub_group">Sub group</string>
    <string name="info">Info</string>
    <string name="archive">Archive</string>
    <string name="block_procurements">Block for procurement</string>
    <string name="catalog_funnel">Catalog funnel</string>
    <string name="account_movements_query">Account movements query</string>
    <string name="number_for_order">Number for order: </string>
    <string name="card_company">Card company</string>
    <string name="please_select_card_company_first">Please select card company first.</string>
    <string name="new_receipts">New receipts</string>
    <string name="card_number">Card number</string>
    <string name="valid_date">Valid date</string>
    <string name="transaction_type">Transaction type</string>
    <string name="confirmation_number">Confirmation number</string>
    <string name="credit_company">Credit company</string>
    <string name="credit_card_payment_u"><u>Credit card payment</u></string>
    <string name="credit_card_payment">Credit card payment</string>
    <string name="cash_payment_u"><u>Cash payment</u></string>
    <string name="cash_payment">Cash payment</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="sale_details">Sale details</string>
    <string name="sales_details_branch">Branch:</string>
    <string name="sales_details_invoices">Invoices:</string>
    <string name="sales_details_quantity">Quantity:</string>
    <string name="sales_details_money">Money:</string>
    <string name="sales_details_yesterday_money">Yesterday money:</string>
    <string name="sales_details_last_week_money">Last week money:</string>
    <string name="sales_details_average">Average:</string>
    <string name="sales_details_average_price">Average price:</string>
    <string name="sales_details_percent_profit">% profit:</string>
    <string name="sales_details_percent_different">% different:</string>
    <string name="sales_details_workers">Workers:</string>
    <string name="sales_details_last_time">Last time:</string>
    <string name="sales_details_profit">Profit:</string>
    <string name="you_want_to_print_this_order">You want to print this order?</string>
    <string name="you_want_to_print_this_return_invoice">You want to print this return invoice?</string>
    <string name="you_want_to_print_this_receipt">You want to print this receipt?</string>
    <string name="you_want_to_print_this_shipping_document">You want to print this shipping document?</string>
    <string name="you_want_to_print_this_invoice">You want to print this invoice?</string>
    <string name="you_want_to_print_this_refund_certificate">You want to print this refund certificate?</string>
    <string name="you_want_to_print_this_proposal">You want to print this proposal?</string>
    <string name="end_of_day">End of day</string>
    <string name="question">Question</string>
    <string name="last_week">Last Week</string>
    <string name="yesterday">Yesterday</string>
    <string name="profit">Profit</string>
    <string name="workers">Workers</string>
    <string name="clear">Clear</string>
    <string name="clear_b"><b>Clear</b></string>
    <string name="receipts_list">Receipts list</string>
    <string name="all_receipts_list">List of all receipts</string>
    <string name="sales_online">Sales online</string>
    <string name="all_sales_online">List of all online sales</string>
    <string name="target_versus_performance">Target versus performance</string>
    <string name="target_versus_performance_information">Target versus performance information</string>
    <string name="cumulative_sales">Cumulative sales</string>
    <string name="all_cumulative_sales">List of all cumulative sales</string>
    <string name="customers_orders">Customers orders</string>
    <string name="new_shipping_document">New Shipping Document</string>
    <string name="new_refund_certificate">New Refund Certificate</string>
    <string name="month">Month</string>
    <string name="order_by">Order by</string>
    <string name="revenue">Revenue</string>
    <string name="payments">Payments</string>
    <string name="revenue_in_last_two_years">Revenue in the last 2 years</string>
    <string name="payments_in_last_two_years">Payments in the last 2 years</string>
    <string name="reference">Reference</string>
    <string name="activity">Activity</string>
    <string name="accounting">Accounting</string>
    <string name="payment_due">Payment due</string>
    <string name="dates_u"><u>Dates</u></string>
    <string name="dates">Dates</string>
    <string name="alternate_account">Alternate account</string>
    <string name="account">Account</string>
    <string name="invoice_details">Invoice details</string>
    <string name="return_invoice_details">Return invoice details</string>
    <string name="new_return_invoice">New return invoice</string>
    <string name="payment_day">Payment D.</string>
    <string name="ref">Ref</string>
    <string name="p_date">P.date</string>
    <string name="customer_price_list">Customer price list</string>
    <string name="fill_empty_fields">Please fill empty fields.</string>
    <string name="street_and_number">Street and number</string>
    <string name="company_id">Company ID</string>
    <string name="code">Code</string>
    <string name="nis"> ש\""ח </string>
    <string name="category_select_activity_title">Select company &amp; branch</string>
    <string name="title_activity_prt">בחר פריט</string>
    <string name="present">נוכחים</string>
    <string name="description">תאור</string>
    <string name="location">מיקום</string>
    <string name="next">המשך</string>
    <string name="sum">סיכום</string>
    <string name="name">שם</string>
    <string name="price_not_exist">מחיר לא נמצא</string>
    <string name="use">משתמש</string>
    <string name="typeUse">סוג</string>
    <string name="allowed_store">מורשה לסניפים</string>
    <string name="allowed_prices">מחיר קניה</string>
    <string name="display_stores">תצוגת סניף</string>
    <string name="sales_price">מחיר </string>
    <string name="select_date">בחירת תאריך</string>
    <string name="select_month">בחירת חודש</string>
    <string name="select_year">בחירת שנה</string>
</resources>