<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/g_LayoutButton1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <SearchView
        android:id="@+id/searchViewPrt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:queryHint="@string/title_activity_prt"
        android:background="@drawable/border_gray" />

    <ListView
        android:id="@+id/prt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:visibility="visible"
        android:divider="@android:color/transparent"
        android:dividerHeight="5.0sp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:id="@+id/price_view"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/barkodItem"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:textSize="17dp"
            />
        <TextView
            android:id="@+id/nameItem"
            android:padding="5dp"
            android:maxLines="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="17dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/priceView"
            android:orientation="horizontal">
            <TextView

                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:text="@string/nis"
                />
            <TextView
                android:id="@+id/price"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                />
            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:text="@string/sales_price"
                />
        </LinearLayout>
        <TextView
            android:visibility="gone"
            android:id="@+id/not_price"
            android:text="@string/price_not_exist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="17dp"/>
    </LinearLayout>
</LinearLayout>